[package]
name = "cumulus-test-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
rand = "0.7.3"
serde = { version = "1.0.101", features = ["derive"] }
async-trait = "0.1.42"

# Substrate
frame-system = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
pallet-transaction-payment = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-basic-authorship = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-block-builder = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-chain-spec = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-client-api = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-consensus = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-executor = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-network = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-rpc = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-service = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-telemetry = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-tracing = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sc-transaction-pool = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-api = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-arithmetic = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-block-builder = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-blockchain = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-core = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-keyring = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-offchain = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.10" }
sp-session = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-state-machine = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-timestamp = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-transaction-pool = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-trie = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
substrate-test-client = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }

# Cumulus
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-relay-validation-worker-provider = { path = "../relay-validation-worker-provider" }

# RPC related dependencies
jsonrpc-core = "15.1.0"

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros"] }

# Polkadot dependencies
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }

# Substrate dependencies
sc-cli = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
substrate-test-utils = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-maybe-compressed-blob = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }
sp-version = { git = "https://github.com/imstar15/substrate", branch = "debug-910" }

# Cumulus
cumulus-test-runtime-upgrade = { path = "../runtime-upgrade" }
